# EL7041_Project_2

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  ber.ipynb  constellations.ipynb  fft_spectrum.txt  interpolate  interpolate.cpp  interpolated_data.txt  main  main.cpp  simulation.toml  test.cpp  test.ipynb  vars.py
include/: BER.hpp  channel_generator.hpp  data_manager.hpp  demodulation.hpp  interpolations.hpp  questions.hpp  sequence_generator.hpp
results/: 16QAM.csv  QPSK.csv  test.csv
src/: BER.cpp  channel_generator.cpp  data_manager.cpp  demodulation.cpp  interpolated_data.txt  interpolations.cpp  old_main.cpp  questions.cpp  sequence_generator.cpp  your_program
